refactor(auth): remove Role class
From the terminology server standpoint there is no need to represent the
user's role when a user is performing a request. We only need the list
of permissions (operation:resources) the user is allowed to do and
perform the authorization checks using the connected authorization
service.